--- a/TaskCheck/TableViewCell.xib
+++ b/TaskCheck/TableViewCell.xib
@@ -9,66 +9,47 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCell" rowHeight="185" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="TaskCheck" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="185"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCell" rowHeight="98" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="TaskCheck" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="193" height="51"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="185"/>
+                <rect key="frame" x="0.0" y="0.0" width="193" height="51"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="説明" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SbZ-5v-QQu">
-                        <rect key="frame" x="16" y="45" width="163" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="cVj-4S-tVW"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="タスク名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="23Z-DD-7Qi">
+                        <rect key="frame" x="16" y="0.0" width="41" height="12"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="進捗率" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dtn-lM-I9Y">
-                        <rect key="frame" x="16" y="74" width="163" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="説明" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6VL-4K-hk3">
+                        <rect key="frame" x="16" y="13" width="21" height="12"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="タスク名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N91-Xi-ZuW">
-                        <rect key="frame" x="16" y="16" width="163" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="mie-wV-SMk"/>
-                            <constraint firstAttribute="width" constant="163" id="tye-OW-1fh"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="進捗率" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="42m-6C-2ra">
+                        <rect key="frame" x="16" y="25" width="31" height="12"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" misplaced="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="kRz-EY-LBv">
-                        <rect key="frame" x="16" y="115" width="150" height="4"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="150" id="hHU-JW-ZZH"/>
-                        </constraints>
+                    <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="EP2-z7-bHo">
+                        <rect key="frame" x="16" y="40" width="150" height="4"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </progressView>
                 </subviews>
-                <constraints>
-                    <constraint firstAttribute="bottomMargin" secondItem="kRz-EY-LBv" secondAttribute="bottom" constant="21" id="7dH-pC-GTP"/>
-                    <constraint firstItem="dtn-lM-I9Y" firstAttribute="leading" secondItem="kRz-EY-LBv" secondAttribute="leading" id="FDL-FS-BPM"/>
-                    <constraint firstItem="N91-Xi-ZuW" firstAttribute="leading" secondItem="SbZ-5v-QQu" secondAttribute="leading" id="Hgh-Tj-pUa"/>
-                    <constraint firstItem="N91-Xi-ZuW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="MHG-iF-c9O"/>
-                    <constraint firstItem="N91-Xi-ZuW" firstAttribute="trailing" secondItem="SbZ-5v-QQu" secondAttribute="trailing" id="agI-fU-qGo"/>
-                    <constraint firstItem="SbZ-5v-QQu" firstAttribute="top" secondItem="N91-Xi-ZuW" secondAttribute="bottom" constant="8" id="cU1-kN-aK4"/>
-                    <constraint firstItem="SbZ-5v-QQu" firstAttribute="leading" secondItem="dtn-lM-I9Y" secondAttribute="leading" id="grv-BE-eET"/>
-                    <constraint firstItem="N91-Xi-ZuW" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-54" id="hoI-cE-rv8"/>
-                    <constraint firstItem="kRz-EY-LBv" firstAttribute="top" secondItem="dtn-lM-I9Y" secondAttribute="bottom" constant="20" id="kC8-B9-0tK"/>
-                    <constraint firstItem="SbZ-5v-QQu" firstAttribute="trailing" secondItem="dtn-lM-I9Y" secondAttribute="trailing" id="pYv-SL-QRW"/>
-                    <constraint firstItem="dtn-lM-I9Y" firstAttribute="top" secondItem="SbZ-5v-QQu" secondAttribute="bottom" constant="8" id="sPk-WH-hHR"/>
-                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="contents" destination="SbZ-5v-QQu" id="sny-py-aUZ"/>
-                <outlet property="progress" destination="kRz-EY-LBv" id="fpE-k5-CcE"/>
-                <outlet property="taskName" destination="SbZ-5v-QQu" id="try-yI-EXK"/>
+                <outlet property="contents" destination="6VL-4K-hk3" id="rFh-fl-Taz"/>
+                <outlet property="progress" destination="EP2-z7-bHo" id="IBD-bS-fxd"/>
+                <outlet property="taskName" destination="23Z-DD-7Qi" id="HsR-7l-qn6"/>
             </connections>
-            <point key="canvasLocation" x="100.76335877862596" y="48.239436619718312"/>
+            <point key="canvasLocation" x="-49.618320610687022" y="-86.267605633802816"/>
         </tableViewCell>
     </objects>
 </document>
